--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,18 @@
 {
     "name": "Webkadabra/yii-rights",
+	"type": "yii-extension",
+	"require": {
+        "composer/installers": "~1.0"
+    }
     "description": "Yii Rights modules by Christoffer Niska",
 	"authors":[
 		{
 			"name":"Christoffer Niska",
 			"email":"cniska@live.com"
+		},
+		{
+			"name":"Webkadabra",
+			"email":"hello@webkadabra.com"
 		}
 	]
 }
